engine/src/abi/onebeat_abi.h

/* Any thread. Never blocks. Callable before ob_engine_create.
 * The client MUST refuse to run against a different major version. */
OB_API uint32_t ob_abi_version(void);
/* Any thread. Never blocks. Static storage, caller must not free. */
OB_API const char* ob_abi_version_string(void);
/* ------------------------------------------------------------------------- */
/* Status codes and errors (ADR-002 §2, error taxonomy: docs/errors.md)        */
/* ------------------------------------------------------------------------- */

typedef enum ob_status {
  OB_OK = 0,
  OB_ERR_INVALID_ARGUMENT = 1,
  OB_ERR_OUT_OF_MEMORY = 2,
  OB_ERR_DEVICE_UNAVAILABLE = 3,
  OB_ERR_DEVICE_FORMAT_UNSUPPORTED = 4,
  OB_ERR_ALREADY_RUNNING = 5,
  OB_ERR_NOT_RUNNING = 6,
  OB_ERR_QUEUE_FULL = 7,
  OB_ERR_FILE_NOT_FOUND = 8,
  OB_ERR_FILE_UNSUPPORTED = 9,
  OB_ERR_INTERNAL = 10
} ob_status;
/* Any thread. Never blocks. Returns the message for the last failing call *on
 * the calling thread* (thread-local). Valid until the next failing call on that
 * thread. Caller must not free. Never NULL. Exceptions never cross this
 * boundary — every entry point is noexcept internally. */
OB_API const char* ob_last_error_message(void);
/* Any thread. Never blocks. Stable English identifier for a status code, for
 * logs and for the UI's error-copy lookup table. */
OB_API const char* ob_status_name(ob_status status);
/* ------------------------------------------------------------------------- */
/* Engine lifecycle (ADR-002 §2)                                              */
/* ------------------------------------------------------------------------- */

typedef struct ob_engine ob_engine;
typedef struct ob_engine_config {
  uint32_t struct_size;      /* = sizeof(ob_engine_config); additive evolution */
  double sample_rate;        /* 0 => device default, else 44100..96000 */
  int32_t block_frames;      /* 0 => 512; else 64..2048, device may grant other */
  int32_t use_null_device;   /* 1 => headless null backend (tests, CI) */
  const char* log_directory; /* UTF-8, may be NULL => platform app-support dir.
                              * Also where the plug-in scan cache is written, so
                              * that pointing this at a scratch directory keeps
                              * everything the engine writes together. */
} ob_engine_config;
/* Main/UI thread only. May block (opens the audio device). Writes *out_engine
 * on OB_OK, leaves it untouched otherwise. */
OB_API ob_status ob_engine_create(const ob_engine_config* config, ob_engine** out_engine);
/* Main/UI thread only. May block (stops and closes the device, joins workers).
 * Safe with NULL. After this call the handle is dangling. */
OB_API void ob_engine_destroy(ob_engine* engine);
/* Main/UI thread only. May block. Starts the audio device callback. */
OB_API ob_status ob_engine_start(ob_engine* engine);
/* Main/UI thread only. May block. Stops the audio device callback. */
OB_API ob_status ob_engine_stop(ob_engine* engine);
/* Fixed layout, POD, 32 bytes. Frozen by the ABI layout test (OB-1-13).
 * Fields are deliberately generic: adding a command type must not change the
 * struct (additive-only evolution, ADR-002 §8). */
typedef struct ob_command {
  uint32_t type;       /* ob_command_type */
  uint32_t generation; /* client-assigned, echoed in the snapshot for coalescing */
  int64_t i64_a;
  double f64_a;
  double f64_b;
} ob_command;
/* UI thread only (single producer). Never blocks, never allocates.
 * Fire-and-forget: returns OB_ERR_QUEUE_FULL if the engine is not draining;
 * the caller may retry next frame. Commands take effect at the next audio
 * block boundary. */
OB_API ob_status ob_engine_post_command(ob_engine* engine, const ob_command* command);
/* Fixed layout, POD. Written by the audio thread into a seqlock-protected slot
 * and copied out by ob_engine_read_snapshot. Field order is chosen for natural
 * alignment with no implicit padding; the layout test freezes every offset. */
typedef struct ob_snapshot {
  uint32_t struct_version; /* = OB_SNAPSHOT_VERSION */
  uint32_t struct_size;    /* = sizeof(ob_snapshot) */

  uint32_t playing;      /* 0/1 */
  uint32_t loop_enabled; /* 0/1 */

  int64_t position_frames; /* canonical transport position */
  uint64_t host_time_ns;   /* monotonic clock at publish; meter ballistics use
                              this, never a frame counter (OB-1-11 §3) */
  uint64_t callback_count; /* audio callbacks since engine start */
  uint64_t xrun_count;     /* render-overrun count (OB-1-12 §3) */
  uint64_t dropped_log_records;
  uint64_t last_command_generation; /* highest generation applied */

  double position_beats;
  double position_seconds;
  double tempo_bpm;
  double loop_start_beats;
  double loop_end_beats;
  double sample_rate;

  int32_t bar;  /* 1-based musical position, 4/4 in v0.1 */
  int32_t beat; /* 1-based */
  int32_t tick; /* 0..959, 960 PPQN */
  int32_t block_frames;

  int32_t active_voices;
  int32_t latency_frames_output;
  int32_t latency_frames_roundtrip;
  int32_t schedule_event_count;

  float peak_left;
  float peak_right;
  float rms_left;
  float rms_right;

  float cpu_load;    /* render time / block budget, 0..1+ */
  float master_gain; /* linear */
} ob_snapshot;
/* Any thread, typically the UI frame callback. Never blocks (bounded seqlock
 * retry), never allocates. Copies the most recent consistent snapshot into
 * caller-owned memory — allocate one ob_snapshot at startup and reuse it. */
OB_API ob_status ob_engine_read_snapshot(ob_engine* engine, ob_snapshot* out_snapshot);
typedef struct ob_event {
  uint32_t type; /* ob_event_type */
  int32_t code;  /* ob_status where applicable, else 0 */
  int64_t i64_a;
  double f64_a;
  char text[96]; /* UTF-8, NUL-terminated, engine-owned copy */
} ob_event;
/* UI thread only (single consumer). Never blocks, never allocates.
 * Returns 1 and fills *out_event when an event was dequeued, 0 when empty.
 * Drain in a loop once per UI frame. */
OB_API int32_t ob_engine_poll_event(ob_engine* engine, ob_event* out_event);
/* ------------------------------------------------------------------------- */
/* Content (v0.1 subset — the real model arrives in Stage 3)                  */
/* ------------------------------------------------------------------------- */

/* Main/UI thread. Returns immediately; decoding happens on a worker thread and
 * completes with an OB_EVT_SAMPLE_LOADED or OB_EVT_ERROR event. Passing NULL
 * loads the bundled default one-shot. Path is UTF-8 and is copied. */
OB_API ob_status ob_engine_load_sample(ob_engine* engine, const char* utf8_path);
/* Main/UI thread. May block briefly (flattens and publishes a schedule on the
 * calling thread, then hands the retired one to the reclaim thread).
 * `steps` is one byte per step: 0 = rest, 1..127 = velocity.
 * v0.1 stand-in for the Stage 3 flattener; the publish machinery it drives is
 * final (OB-1-07). */
OB_API ob_status ob_engine_set_step_pattern(ob_engine* engine, const uint8_t* steps,
                                            int32_t step_count, int32_t midi_note,
                                            double step_beats);
/* Main/UI thread. Never blocks. Human-readable name of the active output
 * device; static per-engine storage, valid until the next device change. */
OB_API const char* ob_engine_output_device_name(ob_engine* engine);
typedef struct ob_plugin_scan_status {
  uint32_t struct_size; /* = sizeof(ob_plugin_scan_status) */
  uint32_t state;       /* ob_scan_state */

  uint32_t bundles_discovered;
  uint32_t bundles_reused; /* unchanged since the last scan, so never opened */
  uint32_t bundles_probed;
  uint32_t plugins_found;

  uint32_t plugin_count; /* rows currently retrievable via ob_engine_plugin_at */
  /* Increments whenever the list changes. The UI re-reads the list when this
   * moves and otherwise does nothing, which is what keeps the per-frame path
   * allocation-free. */
  uint32_t list_generation;

  char current[256]; /* bundle being opened right now; "" when not probing */
} ob_plugin_scan_status;
/* One row of the plugin list. ~1 KB, POD, caller-owned: allocate one and reuse
 * it across the loop that reads the list. Copied out rather than pointed at
 * because the list is rebuilt underneath as the scan streams in. */
typedef struct ob_plugin_info {
  uint32_t struct_size; /* = sizeof(ob_plugin_info) */
  uint32_t format;      /* ob_plugin_format */
  uint32_t outcome;     /* ob_scan_outcome */
  uint32_t flags;       /* OB_PLUGIN_FLAG_* */

  uint32_t features;        /* reserved for the browser's filters (FR-PLG-13) */
  uint32_t param_count;     /* 0 unless OB_PLUGIN_FLAG_INTROSPECTED */
  uint32_t index_in_bundle; /* one bundle can contain many plugins */
  uint32_t audio_input_count;
  uint32_t audio_output_count;
  uint32_t note_input_count;
  uint32_t note_output_count;
  uint32_t padding_;

  int64_t scanned_at_nanos; /* Unix nanoseconds */

  char id[128];
  char name[128];
  char vendor[128];
  char version[32];
  char path[512];

  /* Added in ABI 1.2. Appended so every ABI 1.1 field keeps its offset. */
  uint32_t failure_phase;  /* ob_scan_phase; meaningful when quarantined */
  uint32_t failure_signal; /* signal that killed the helper, or 0 */
  uint32_t retry_count;    /* manual retries since this quarantine began */
} ob_plugin_info;
/* Main/UI thread. May block briefly: reads the scan cache from disk. Call once
 * at startup, before the first frame — that is the whole point of the cache.
 * Safe to call again; it discards and reloads. */
OB_API ob_status ob_engine_plugin_cache_load(ob_engine* engine);
/* Main/UI thread. Never blocks: launches the background scan and returns.
 * Returns OB_ERR_ALREADY_RUNNING if a scan is in flight. Passing NULL or an
 * empty `utf8_directories` scans the standard plug-in folders; otherwise it is
 * a NUL-separated, double-NUL-terminated list of directories (so the UI can add
 * user folders without an array-of-pointers marshalling dance). */
OB_API ob_status ob_engine_plugin_scan_start(ob_engine* engine, const char* utf8_directories);
/* Main/UI thread. Never blocks. Asks the scan to stop at the next bundle; a
 * cancelled scan does not update the cache. */
OB_API ob_status ob_engine_plugin_scan_cancel(ob_engine* engine);
/* Main/UI thread. Never blocks: launches a background re-scan of exactly one
 * quarantined bundle. `utf8_path` is copied. Returns OB_ERR_ALREADY_RUNNING if
 * another scan is in flight. */
OB_API ob_status ob_engine_plugin_retry(ob_engine* engine, const char* utf8_path);
/* Main/UI thread. Never blocks. Also the point at which streamed results are
 * folded into the list, so call it once per frame while a scan is running. */
OB_API ob_status ob_engine_plugin_scan_status(ob_engine* engine, ob_plugin_scan_status* out_status);
/* Main/UI thread. Never blocks. Copies row `index` (0-based, ordered by display
 * name) into caller-owned memory. Returns OB_ERR_INVALID_ARGUMENT for an index
 * past the end — which is how a stale index is detected after the list changed
 * under the caller. */
OB_API ob_status ob_engine_plugin_at(ob_engine* engine, int32_t index, ob_plugin_info* out_info);
/* Main/UI thread. May block while the helper launches and the plug-in loads.
 * Strings are copied before return. v0.2 has one flat instrument slot. */
OB_API ob_status ob_engine_instance_add(ob_engine* engine, const char* utf8_bundle_path,
                                        const char* utf8_plugin_id);