app/lib/src/engine/generated/onebeat_bindings.dart

// GENERATED FILE - DO NOT EDIT.
// Regenerate with: cd app && dart run ffigen
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names
// ignore_for_file: unused_field, unused_element, constant_identifier_names, prefer_final_locals
// ignore_for_file: require_trailing_commas, unnecessary_parenthesis, always_declare_return_types
// coverage:ignore-file

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Generated bindings for the OneBeat engine ABI.
class OneBeatBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OneBeatBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OneBeatBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int ob_abi_version() {
    return _ob_abi_version();
  }

  late final _ob_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('ob_abi_version');
  late final _ob_abi_version = _ob_abi_versionPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> ob_abi_version_string() {
    return _ob_abi_version_string();
  }

  late final _ob_abi_version_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'ob_abi_version_string',
      );
  late final _ob_abi_version_string = _ob_abi_version_stringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> ob_last_error_message() {
    return _ob_last_error_message();
  }

  late final _ob_last_error_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'ob_last_error_message',
      );
  late final _ob_last_error_message = _ob_last_error_messagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> ob_status_name(ob_status status) {
    return _ob_status_name(status.value);
  }

  late final _ob_status_namePtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.UnsignedInt)>
      >('ob_status_name');
  late final _ob_status_name = _ob_status_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  ob_status ob_engine_create(
    ffi.Pointer<ob_engine_config> config,
    ffi.Pointer<ffi.Pointer<ob_engine>> out_engine,
  ) {
    return ob_status.fromValue(_ob_engine_create(config, out_engine));
  }

  late final _ob_engine_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine_config>,
            ffi.Pointer<ffi.Pointer<ob_engine>>,
          )
        >
      >('ob_engine_create');
  late final _ob_engine_create = _ob_engine_createPtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine_config>,
          ffi.Pointer<ffi.Pointer<ob_engine>>,
        )
      >();

  void ob_engine_destroy(ffi.Pointer<ob_engine> engine) {
    return _ob_engine_destroy(engine);
  }

  late final _ob_engine_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ob_engine>)>>(
        'ob_engine_destroy',
      );
  late final _ob_engine_destroy = _ob_engine_destroyPtr
      .asFunction<void Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_start(ffi.Pointer<ob_engine> engine) {
    return ob_status.fromValue(_ob_engine_start(engine));
  }

  late final _ob_engine_startPtr =
      _lookup<
        ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<ob_engine>)>
      >('ob_engine_start');
  late final _ob_engine_start = _ob_engine_startPtr
      .asFunction<int Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_stop(ffi.Pointer<ob_engine> engine) {
    return ob_status.fromValue(_ob_engine_stop(engine));
  }

  late final _ob_engine_stopPtr =
      _lookup<
        ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<ob_engine>)>
      >('ob_engine_stop');
  late final _ob_engine_stop = _ob_engine_stopPtr
      .asFunction<int Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_post_command(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ob_command> command,
  ) {
    return ob_status.fromValue(_ob_engine_post_command(engine, command));
  }

  late final _ob_engine_post_commandPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ob_command>,
          )
        >
      >('ob_engine_post_command');
  late final _ob_engine_post_command = _ob_engine_post_commandPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ob_command>)
      >();

  ob_status ob_engine_read_snapshot(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ob_snapshot> out_snapshot,
  ) {
    return ob_status.fromValue(_ob_engine_read_snapshot(engine, out_snapshot));
  }

  late final _ob_engine_read_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ob_snapshot>,
          )
        >
      >('ob_engine_read_snapshot');
  late final _ob_engine_read_snapshot = _ob_engine_read_snapshotPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ob_snapshot>)
      >();

  int ob_engine_poll_event(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ob_event> out_event,
  ) {
    return _ob_engine_poll_event(engine, out_event);
  }

  late final _ob_engine_poll_eventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ob_engine>, ffi.Pointer<ob_event>)
        >
      >('ob_engine_poll_event');
  late final _ob_engine_poll_event = _ob_engine_poll_eventPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ob_event>)
      >();

  ob_status ob_engine_load_sample(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
  ) {
    return ob_status.fromValue(_ob_engine_load_sample(engine, utf8_path));
  }

  late final _ob_engine_load_samplePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_load_sample');
  late final _ob_engine_load_sample = _ob_engine_load_samplePtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>)
      >();

  ob_status ob_engine_set_step_pattern(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Uint8> steps,
    int step_count,
    int midi_note,
    double step_beats,
  ) {
    return ob_status.fromValue(
      _ob_engine_set_step_pattern(
        engine,
        steps,
        step_count,
        midi_note,
        step_beats,
      ),
    );
  }

  late final _ob_engine_set_step_patternPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Double,
          )
        >
      >('ob_engine_set_step_pattern');
  late final _ob_engine_set_step_pattern = _ob_engine_set_step_patternPtr
      .asFunction<
        int Function(
          ffi.Pointer<ob_engine>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          double,
        )
      >();

  ffi.Pointer<ffi.Char> ob_engine_output_device_name(
    ffi.Pointer<ob_engine> engine,
  ) {
    return _ob_engine_output_device_name(engine);
  }

  late final _ob_engine_output_device_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ob_engine>)
        >
      >('ob_engine_output_device_name');
  late final _ob_engine_output_device_name = _ob_engine_output_device_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_plugin_cache_load(ffi.Pointer<ob_engine> engine) {
    return ob_status.fromValue(_ob_engine_plugin_cache_load(engine));
  }

  late final _ob_engine_plugin_cache_loadPtr =
      _lookup<
        ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<ob_engine>)>
      >('ob_engine_plugin_cache_load');
  late final _ob_engine_plugin_cache_load = _ob_engine_plugin_cache_loadPtr
      .asFunction<int Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_plugin_scan_start(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_directories,
  ) {
    return ob_status.fromValue(
      _ob_engine_plugin_scan_start(engine, utf8_directories),
    );
  }

  late final _ob_engine_plugin_scan_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_plugin_scan_start');
  late final _ob_engine_plugin_scan_start = _ob_engine_plugin_scan_startPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>)
      >();

  ob_status ob_engine_plugin_scan_cancel(ffi.Pointer<ob_engine> engine) {
    return ob_status.fromValue(_ob_engine_plugin_scan_cancel(engine));
  }

  late final _ob_engine_plugin_scan_cancelPtr =
      _lookup<
        ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<ob_engine>)>
      >('ob_engine_plugin_scan_cancel');
  late final _ob_engine_plugin_scan_cancel = _ob_engine_plugin_scan_cancelPtr
      .asFunction<int Function(ffi.Pointer<ob_engine>)>();

  ob_status ob_engine_plugin_retry(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
  ) {
    return ob_status.fromValue(_ob_engine_plugin_retry(engine, utf8_path));
  }

  late final _ob_engine_plugin_retryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ob_engine_plugin_retry');
  late final _ob_engine_plugin_retry = _ob_engine_plugin_retryPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ffi.Char>)
      >();

  ob_status ob_engine_plugin_scan_status(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ob_plugin_scan_status> out_status,
  ) {
    return ob_status.fromValue(
      _ob_engine_plugin_scan_status(engine, out_status),
    );
  }

  late final _ob_engine_plugin_scan_statusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Pointer<ob_plugin_scan_status>,
          )
        >
      >('ob_engine_plugin_scan_status');
  late final _ob_engine_plugin_scan_status = _ob_engine_plugin_scan_statusPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, ffi.Pointer<ob_plugin_scan_status>)
      >();

  ob_status ob_engine_plugin_at(
    ffi.Pointer<ob_engine> engine,
    int index,
    ffi.Pointer<ob_plugin_info> out_info,
  ) {
    return ob_status.fromValue(_ob_engine_plugin_at(engine, index, out_info));
  }

  late final _ob_engine_plugin_atPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ob_engine>,
            ffi.Int32,
            ffi.Pointer<ob_plugin_info>,
          )
        >
      >('ob_engine_plugin_at');
  late final _ob_engine_plugin_at = _ob_engine_plugin_atPtr
      .asFunction<
        int Function(ffi.Pointer<ob_engine>, int, ffi.Pointer<ob_plugin_info>)
      >();

  ob_status ob_engine_instance_add(
    ffi.Pointer<ob_engine> engine,
    ffi.Pointer<ffi.Char> utf8_bundle_path,
    ffi.Pointer<ffi.Char> utf8_plugin_id,
  ) {
    return ob_status.fromValue(
      _ob_engine_instance_add(engine, utf8_bundle_path, utf8_plugin_id),
    );
  }
